ParameterIndependent/Opt4.err
  File "OptimisationMethodQuart4.py", line 154
    def MoreInputs_Run(:
                       ^
SyntaxError: invalid syntax

real	0m0.056s
user	0m0.026s
sys	0m0.008s
